# Memory-Allocator

./: .gitignore  CMakeLists.txt  Dockerfile  README.md
examples/: allocator_example_1.cpp  gc_example_1.cpp  gc_example_2.cpp
includes/: allocator.h  bst_node.h  chunk_metadata.h  garbage_collector.h
lib/: allocator.cpp  bst_node.cpp  chunk_metadata.cpp  garbage_collector.cpp
public/: Untitled-2023-10-22-1615.excalidraw
src/: main.cpp
temp/: architecture.cpp  log  stack.cpp  stack2.cpp  stack3.cpp
